[project]
name = "imgnet-adversarial"
version = "0.1.0"
description = "Tiny ImageNet ResNet-18 training and FGSM/PGD evaluation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "torchvision>=0.16",
    "tqdm>=4.66",
    "matplotlib>=3.8",
]

[tool.uv]
package = false
